--- a/index.html
+++ b/index.html
@@ -36,27 +36,27 @@
                         <h2 class="titulo-secao">Carnes</h2>
                         <div class="campo-form">
                             <label for="bovina">Bovina</label>
-                            <input type="text" name="bovina" id="bovina" placeholder="Valor do Kg" onkeyup="formatarMoeda(this)">
+                            <input type="text" name="bovina" id="bovina" placeholder="Valor do Kg">
                         </div>
                         <div class="campo-form">
                             <label for="frango">Frango</label>
-                            <input type="text" name="frango" id="frango" placeholder="Valor do Kg" onkeyup="formatarMoeda(this)">
+                            <input type="text" name="frango" id="frango" placeholder="Valor do Kg">
                         </div>
                         <div class="campo-form">
                             <label for="suina">Suina</label>
-                            <input type="text" name="suina" id="suina" placeholder="Valor do Kg" onkeyup="formatarMoeda(this)">
+                            <input type="text" name="suina" id="suina" placeholder="Valor do Kg">
                         </div>
                     </section>
                     <section class="bebida">
                         <h2 class="titulo-secao">Bebidas</h2>
                         <div class="campo-form">
                             <label for="refri">Refrigerante (Por Litro)</label>
-                            <input type="text" name="refri" id="refri" placeholder="Valor por unidade" required onkeyup="formatarMoeda(this)">
+                            <input type="text" name="refri" id="refri" placeholder="Valor por unidade" required>
                         </div>
                         <div class="campo-form">
                             <label for="cerveja">Cerveja (Lata 355ml)</label>
 
-                            <input type="text" name="cerveja" id="cerveja" placeholder="Valor por unidade" onkeyup="formatarMoeda(this)">
+                            <input type="text" name="cerveja" id="cerveja" placeholder="Valor por unidade">
                         </div>
                         <div class="campo-form">
                             <label for="qtdPessoasAlcool">N. de pessoas que bebem álcool</label>
@@ -134,7 +134,6 @@
     </footer>
 
     <script type="module" src="./js/script.js"></script>
-    <script src="js/mascara.js"></script>
 
 
 </body>
