--- a/index.html
+++ b/index.html
@@ -80,9 +80,9 @@
                             <th>Total</th>
                         </tr>
                         <tr>
-                            <th>Carne para o churrasco</th>
-                            <td class="valor-resposta" id="qtd-carne"></td>
-                            <td class="valor-resposta" id="valor-carne"></td>
+                            <th>Carne bovina necessária para o churrasco</th>
+                            <td class="valor-resposta" id="qtd-bovina"></td>
+                            <td class="valor-resposta" id="valor-bovina"></td>
                         </tr>
                         <tr>
                             <th>Frango necessária para o churrasco</th>
