--- a/index.html
+++ b/index.html
@@ -133,9 +133,7 @@
         <p>Site Criado Por <a href="#">Amauri Blanco</a></p>
     </footer>
 
-    <script type="module" src="./js/script.js"></script>
-
-
+    <script type="module" src="./src/js/script.js"></script>
 </body>
 
 </html>
